# qt-heif-image-plugin

./: .clang-format  .gitignore  .lvimrc  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md
debian/: Dockerfile  buildtool.py  changelog  control  copyright  dockerscript.sh  gbp.conf  rules
examples/qtheif/: main.cpp  qtheif.pro
src/: CMakeLists.txt  assertion.h  contextwriter.cpp  contextwriter.h  contextwriter_p.h  heif.json  heif.pro  iohandler.cpp  iohandler.h  log.h  logging.h  main.cpp  plugin.cpp  plugin.h  qheifhandler.cpp  qheifhandler_p.h  trace.h  util.h
